--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -623,6 +623,19 @@ footer {
         padding: 0 0 0 15px;
     }
 }
+/* Publication
+*/
+
+#publication {
+    padding: 50px 15px 20px 15px;
+    border-bottom: 1px solid $border;
+    text-align: center;
+
+    h2 {
+        color: $heading;
+        margin-bottom: 50px;
+    }
+}
 
 /*
     -------------------------------
